Migrate to GitHub Pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         'inline_keyboard': [[{
                             "text": "Ход окончен",
                             "web_app": {
-                                "url": `https://unciv_notifier_bot_proxy.onrender.com?bot_token=${bot_token}&players=${players}`,
+                                "url": `https://55aah.github.io/unciv_notifier_bot_proxy?bot_token=${bot_token}&players=${players}`,
                             },
                         }]],
                     },
