--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
             players.push(players.shift());            
             players = encodeURIComponent(JSON.stringify(players));
             
-            player = 396208817;
             document.getElementById('info').innerText = 'Sending...';
             
             let url = `https://api.telegram.org/bot${bot_token}/sendMessage`;
@@ -45,7 +44,7 @@
                 console.log(data);
                 document.getElementById('info').innerText = JSON.stringify(request_json) + '\n\n' + JSON.stringify(data);
                 if (data['ok']) {
-                    //Telegram.WebApp.close();
+                    Telegram.WebApp.close();
                 }
             }).catch((error) => {
                 console.error(error);
