--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
                 return response.json();
             }).then((data) => {
                 console.log(data);
-                document.getElementById('info').innerText = JSON.stringify(request_json) + '\n\n' + JSON.stringify(data);
                 if (data['ok']) {
                     Telegram.WebApp.close();
+                }
+                else {
+                    document.getElementById('info').innerText = JSON.stringify(request_json) + '\n\n' + JSON.stringify(data);
                 }
             }).catch((error) => {
                 console.error(error);
